--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="first">
         <div class="firstcontent">
             <div class="name-wrapper">
-                <h1>Hi, I'm Mukesh Jat</h1>
+                <h1>Hi, I'm Mukesh Dhayal</h1>
                 
             </div>
             <div class="intro-wrapper">
